<resources>
    <string name="app_name">OrderFood</string>

    //Add Expense
    <string name="add_expense">Add Expense</string>
    <string name="category">Category</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="amount">Amount</string>
    <string name="paid_to">Paid to</string>
    <string name="spent_date">Spent Date</string>
    <string name="add_comment">Add Comment</string>

    //My Expense
    <string name="my_expense">My Expense</string>

    <string name="view_list_order">View List Order</string>
    <string name="ask_price">Ask Price Estimation</string>
    <string name="confirm_order">Confirm Order</string>

    <string name="shop_name_transaction">Shop name Transactions</string>
    <string name="details">Details</string>
    <string name="bill_amount">Bill \n Amount</string>
    <string name="paid">Paid</string>
    <string name="view_bill"><u>View Bill</u></string>

    <string name="item_name">Item Name :</string>
    <string name="quantity">Quantity :</string>
    <string name="number_of_items">Number Of Items :</string>

    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login_confirm_order">Login to Confirm Order</string>
    <string name="didnt_receive">Didn\'t Receive the OTP</string>
    <string name="resend_otp">Resend OTP</string>
</resources>
