<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/enter_mobile_number"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:background="@drawable/confirm_order_edittext_background"
        android:padding="4dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_otp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:weightSum="4">

        <EditText
            android:id="@+id/edtFirst"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/confirm_order_edittext_background"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtSecond"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/confirm_order_edittext_background"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtThird"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/confirm_order_edittext_background"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtFourth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/confirm_order_edittext_background"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:padding="4dp"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/enterotp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_confirm_order"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/didnt_receive"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnResendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@color/resend_otp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/resend_otp"
        android:textAllCaps="false"
        android:textColor="@color/black" />

</LinearLayout>