<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ViewListOrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarViewListOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_list_order"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerview_view_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llayoutCart"
        android:layout_below="@+id/toolbarViewListOrder"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:id="@+id/llayoutCart"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/imgCart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:src="@drawable/shoppingcart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/imgCart"
                android:text="3 items added to cart"
                android:textColor="@color/app_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_color"
                android:text="@string/ask_price"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnConfirmOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/app_color"
                android:text="@string/confirm_order"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>