<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/txtId"
            style="@style/EditText.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <RelativeLayout
            android:id="@+id/rlItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp">

            <TextView
                android:id="@+id/txtItemNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textColor="@color/app_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/txtItemNameView"
                android:text="Dal"
                android:textColor="@color/app_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlItemName"
            android:layout_marginStart="90dp">

            <TextView
                android:id="@+id/txtQuantityView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@color/app_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/txtQuantityView"
                android:text="1 KG"
                android:textColor="@color/app_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlNumberOfItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlQuantity"
            android:layout_marginStart="90dp">

            <TextView
                android:id="@+id/txtNumberOfItemsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_items"
                android:textColor="@color/app_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNumberOfItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/txtNumberOfItemsView"
                android:text="1"
                android:textColor="@color/app_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>