<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddExpenseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_expense"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarAddExpense"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category"
                    android:textColor="@color/app_color"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/txtCategory"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/spinner_background"
                    android:gravity="center"
                    android:textAlignment="center" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/spinnerCategory"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPaymentMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlCategory"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/txtpaymentMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/payment_mode"
                    android:textColor="@color/app_color"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerPaymentMode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/txtpaymentMode"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/spinner_background"
                    android:textAlignment="center" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/spinnerPaymentMode"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlPaymentMode"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/txtAmountView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/amount"
                    android:textColor="@color/app_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAmountView"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/view_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/txtAmount"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPaidTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlAmount"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/txtPaidToView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/paid_to"
                    android:textColor="@color/app_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtPaidTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPaidToView"
                    android:gravity="center"
                    android:text="Kirana"
                    android:textColor="@color/view_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/txtPaidTo"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlSpentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlPaidTo"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/txtSpentDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/spent_date"
                    android:textColor="@color/app_color"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:id="@+id/rlSpentDate_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtSpentDate"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp">

                    <EditText
                        android:id="@+id/edtSpentDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="@null"
                        android:focusable="false"
                        android:gravity="center"
                        android:text="2019-01-01"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/show_pass_btn"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:alpha=".5"
                        android:onClick="showCalendar"
                        android:src="@drawable/calendar"
                        android:visibility="visible" />
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/rlSpentDate_1"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_color" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAddComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlSpentDate"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/txtAddComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_comment"
                    android:textColor="@color/app_color"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edtAddComment"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/txtAddComment"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/edittext_background"
                    android:inputType="text|textMultiLine" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnAddExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlAddComment"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/add_expense"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>